Add to source control
- Project converted from code base not previously under source control

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "responsive-view": {
+    "responsive-guide": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/responsive-view",
+            "outputPath": "dist/responsive-guide",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "responsive-view:build:production"
+              "buildTarget": "responsive-guide:build:production"
             },
             "development": {
-              "buildTarget": "responsive-view:build:development"
+              "buildTarget": "responsive-guide:build:development"
             }
           },
           "defaultConfiguration": "development"
