--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "responsive-view",
+  "name": "responsive-guide",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "build-prod": "ng build --configuration production --base-href=/responsive-guide/",
     "test": "ng test"
   },
   "private": true,
